fixes project layout bugs

--- a/muckrock/assets/scss/layout/_project.scss
+++ b/muckrock/assets/scss/layout/_project.scss
@@ -100,6 +100,7 @@
 }
 
 .project.detail {
+    overflow: hidden;
     .project-header {
         @include edge-to-edge($vertical-rhythm);
         .image, .title {
@@ -134,6 +135,7 @@
         main {
             @include flex(2 1 20em);
             min-width: 0;
+            margin-bottom: $vertical-rhythm;
         }
         aside {
             @include flex(1 1 10em);
